# npltz

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  calendar_data.json  cliff.toml  deny.toml  install.sh  npltz.desktop  typos.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  preview.tape
.github/ISSUE_TEMPLATE/: bug-reports.yml  config.yml  custom.yml  feature-reqests.yml
.github/workflows/: changelog.yml  ci.yml  crate.yml  preview.yml  release.yml  shellcheck.yml  shellfmt.yml  typos.yml
man/: npltz.1
src/: app.rs  battery.rs  calendar.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  self_manage.rs  setup.rs  theme.rs  tui.rs  ui.rs
src/ui/: calendar_popup.rs  goto_popup.rs  help_popup.rs  mod.rs  status_bar.rs  theme_selector.rs  warning.rs  year_overview.rs
xtask/: Cargo.toml
xtask/src/: main.rs
