[workspace]
members = [".", "xtask"]
resolver = "2"
default-members = ["."]

[workspace.package]
version = "1.0.0"
edition = "2024"
description = "Nepali Patro in your terminal"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["nepali", "calendar", "bikram-sambat", "tui", "terminal"]

[package]
name = "npltz"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
chrono = "0.4.45"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
dirs = "6"
thiserror = "2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
