[workspace]
members = [".", "xtask"]
resolver = "2"
default-members = ["."]

[workspace.package]
version = "1.0.7"
edition = "2024"
description = "Nepali Patro in your terminal"
homepage = "https://github.com/harilvfs/npltz"
documentation = "https://github.com/harilvfs/npltz/blob/main/.github/README.md"
repository = "https://github.com/harilvfs/npltz"
readme = "./.github/README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["nepali-patro", "calendar", "bikram-sambat", "tui", "terminal"]

[package]
name = "npltz"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
include = [
  "src",
  "Cargo.toml",
  ".github/README.md",
  "LICENSE",
  "calendar_data.json",
]

[lib]
name = "npltz"
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
chrono = "0.4.45"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
dirs = "6"
thiserror = "2"
clap_mangen = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
